--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
 <body>
   <ion-app></ion-app>
 
+  <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
   <script src="cordova.js"></script>
   <script src="build/js/app.bundle.js"></script>
 </body>
