--- a/app/pages/chat/chat.html
+++ b/app/pages/chat/chat.html
@@ -5,20 +5,25 @@
     <ion-title>Chat</ion-title>
 </ion-navbar>
 
-<ion-content class="has-header has-footer content-stable">
+<ion-content padding has-header>
+    <ion-card>
+        <ion-card-header>
+            Video chat of {{username}}
+        </ion-card-header>
+
+        <ion-card-content>
+            <video id="contact-video" autoplay></video>
+        </ion-card-content>
+    </ion-card>
+
     <ion-list>
-        <ion-item *ngFor="#content of messages" class="messages">
-            <h2>{{content.content}}</h2>
-            <p>{{content.date | WebRTCDate}}</p>
+        <ion-item>
+            <span class="input-label">Contact to</span>
+            <input type="text" [(ngModel)]="otherUsername">
         </ion-item>
     </ion-list>
-</ion-content>
 
-<form [ngFormModel]="messageForm" (ngSubmit)="sendMessage(messageForm.value)">
-<ion-toolbar position="bottom">
-    <ion-textarea placeholder="Type your message here" ngControl="message"></ion-textarea>
-    <ion-buttons end>
-        <button type="submit" royal>Send<ion-icon name="send"></ion-icon></button>
-    </ion-buttons>
-</ion-toolbar>
-</form>
+    <button block (click)="startCall()">
+    Call
+    </button>
+</ion-content>
