--- a/app/pages/chat/chat.html
+++ b/app/pages/chat/chat.html
@@ -18,8 +18,8 @@
 
     <ion-list>
         <ion-item>
-            <span class="input-label">Contact to</span>
-            <input type="text" [(ngModel)]="otherUsername">
+            <ion-label>Contact to</ion-label>
+            <ion-input [(ngModel)]="otherUsername"></ion-input>
         </ion-item>
     </ion-list>
 
